--- a/web/appraisal/templates/appraisal/realestate_property.html
+++ b/web/appraisal/templates/appraisal/realestate_property.html
@@ -17,7 +17,7 @@
       <div class="form-group row">
         <label class="col-sm-3 col-form-label-sm text-right">{{forms.realestate.addressStreet.label_tag}}</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control form-control-sm" value="{{realestate.addressStreet}}" disabled>
+          {{forms.realestate.addressStreet}}
         </div>
       </div>
     </div>
@@ -25,7 +25,7 @@
       <div class="form-group row">
         <label class="col-sm-3 col-form-label-sm text-right">{{forms.realestate.addressNumber.label_tag}}</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control form-control-sm" value="{{realestate.addressNumber}}" disabled>
+          {{forms.realestate.addressNumber}}
         </div>
       </div>
     </div>
@@ -34,7 +34,7 @@
       <div class="form-group row">
         <label class="col-sm-4 col-form-label-sm text-right">{{forms.property.number.label_tag}}</label>
         <div class="col-sm-8">
-          <input type="text" class="form-control form-control-sm" value="{{realestate.apartment.number}}" disabled>
+          {{forms.property.number}}
         </div>
       </div>
     </div>
@@ -46,7 +46,7 @@
       <div class="form-group row">
         <label class="col-sm-3 col-form-label-sm text-right">{{forms.realestate.addressCommune.label_tag}}</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control form-control-sm" value="{{realestate.addressCommune}}" disabled>
+          {{forms.realestate.addressCommune}}
         </div>
       </div>
     </div>
@@ -54,7 +54,7 @@
       <div class="form-group row">
         <label class="col-sm-3 col-form-label-sm text-right">{{forms.realestate.addressRegion.label_tag}}</label>
         <div class="col-sm-9">
-          <input type="text" class="form-control form-control-sm" value="{{realestate.addressRegion}}" disabled>
+          {{forms.realestate.addressRegion}}
         </div>
       </div>
     </div>
