--- a/web/main/templates/main/modals.html
+++ b/web/main/templates/main/modals.html
@@ -108,7 +108,7 @@
       <div class="modal-footer">
         <form action="" method="post" id="form">
           {% csrf_token %}
-          <input id="appraisal_id" name="appraisal_id" type="hidden" value="2">
+          <input id="tasadorApp_id" name="tasadorApp_id" type="hidden" value="">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
           <button name="btn_assign_tasador" class="btn btn-primary">Asignar</button>
 
