--- a/web/main/templates/main/appraisals.html
+++ b/web/main/templates/main/appraisals.html
@@ -179,6 +179,6 @@
   $(document).on('click','.asignar_Tasador',function(){
       var id = $(this).data('id');
       console.log(id);
-      $('#tasadorApp_id').val(id);
+      $('#tasadorAppraisal_id').val(id);
       });
 </script>
