--- a/web/main/templates/main/modals.html
+++ b/web/main/templates/main/modals.html
@@ -90,6 +90,8 @@
           </thead>
           <tbody>
             {% for user in tasadores %}
+            <form action="" method="post" id="form">
+              {% csrf_token %}
             <tr>
               <th scope="col">
                 <div class="form-check">
@@ -106,9 +108,7 @@
         </table>
       </div>
       <div class="modal-footer">
-        <form action="" method="post" id="form">
-          {% csrf_token %}
-          <input id="tasadorApp_id" name="tasadorApp_id" type="hidden" value="">
+          <input id="tasadorAppraisal_id" name="tasadorAppraisal_id" type="hidden" value="">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
           <button name="btn_assign_tasador" class="btn btn-primary">Asignar</button>
 
