--- a/web/appraisal/templates/appraisal/realestate_logbook.html
+++ b/web/appraisal/templates/appraisal/realestate_logbook.html
@@ -56,7 +56,7 @@
           </div>
           </div>
         </div>
-        <div id="collapse{{forloop.counter}}" class="collapse" aria-labelledby="heading{{forloop.counter}}" data-parent="#accordion">
+        <div id="collapse{{forloop.counter}}" class="collapse show" aria-labelledby="heading{{forloop.counter}}" data-parent="#accordion">
         <div class="card-body">
           <small>
           {% for vars in appraisal_time.diffs %}
