--- a/web/appraisal/templates/appraisal/modals.html
+++ b/web/appraisal/templates/appraisal/modals.html
@@ -188,9 +188,9 @@
         <img id="photo" class="img-fluid rounded" src=""/>
       </div>
       <div class="modal-footer">
-        <input id="photo_id" name="photo_id" type="hidden" value="0">
+        <!--<input id="photo_id" name="photo_id" type="hidden" value="0">-->
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-        <button class="btn btn-danger" name="btn_delete_photo">Borrar</button>
+        <!--<button class="btn btn-danger" name="btn_delete_photo">Borrar</button>-->
       </div>
     </div>
   </div>
