--- a/web/appraisal/templates/appraisal/realestate_appraisal.html
+++ b/web/appraisal/templates/appraisal/realestate_appraisal.html
@@ -29,7 +29,7 @@
       {% else %}
       <button name="btn_export" class="btn btn-outline-dark mr-2" type="button" data-toggle="modal" data-target="#modalExport">Exportar</button>
       <button name="btn_finish" class="btn btn-outline-dark mr-2" type="button" data-toggle="modal" data-target="#modalFinish">Finalizar</button>
-      <button name="btn_save" class="btn btn-outline-dark mr-2" name="save" style="font-family:Material Icons;font-size:1em;">save_alt</button>
+      <button name="btn_save" class="btn btn-outline-dark mr-2" name="save" style="font-family:Material Icons;font-size:1em;">save</button>
       <button name="btn_delete" class="btn btn-outline-dark" type="button" data-toggle="modal" data-target="#modalDelete" style="font-family:Material Icons;font-size:1em;">delete</button>
       {% endif %}
     </nav>
@@ -135,6 +135,24 @@
 {% include "appraisal/modals.html" %}
 
 </form>
+
+<!-- Script to go back to the same tab when refreshing webpage -->
+<script>
+  $('#myTab a').click(function(e) {
+    e.preventDefault();
+    $(this).tab('show');
+  });
+
+  // store the currently selected tab in the hash value
+  $("ul.nav-tabs > li > a").on("shown.bs.tab", function(e) {
+    var id = $(e.target).attr("href").substr(1);
+    window.location.hash = id;
+  });
+
+  // on load of the page: switch to the currently selected tab
+  var hash = window.location.hash;
+  $('#myTab a[href="' + hash + '"]').tab('show');
+</script>
 
 <script>
   function updateClock() {
