--- a/web/appraisal/templates/appraisal/realestate_general.html
+++ b/web/appraisal/templates/appraisal/realestate_general.html
@@ -1,5 +1,5 @@
 
-<div class="row ml-4 mt-4">
+<div class="row ml-4 mt-4 mr-4 mb-4">
 <div class="col">
 
   <div class="row">
@@ -140,8 +140,18 @@
       </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-4">
+      <div class="form-group row">
+        <div class="col-sm-3 text-right">
+          {{forms.appraisal.propietarioReferenceSII}}
+        </div>        
+        <label class="col-sm-9 col-form-label-sm">Referencia SII</label>
+      </div>
+    </div>
+  </div>
 
-    <div class="card bg-light mb-1">
+  <div class="card bg-light mb-0 mr-2">
     <div class="card-header">Roles</div>
     <div class="card-body">
       <div class="card-text">
@@ -152,7 +162,10 @@
             </label>
           </div>
           <div class="col-lg-3">
-            {{forms.appraisal.rolAvaluo}}
+            {{forms.appraisal.rol}}
+          </div>
+          <div class="col-lg-3">
+            {{forms.appraisal.rolType}}
           </div>
         </div>
       </div>
