--- a/web/appraisal/templates/appraisal/realestate_property.html
+++ b/web/appraisal/templates/appraisal/realestate_property.html
@@ -166,6 +166,40 @@
 
   </div>
 
+  <div class="card bg-light mb-4">
+
+    <div class="card-header">
+      Características de construcción
+    </div>
+
+    <div class="card-body">
+      <div class="row">
+        <div class="col-md-12">
+          <!-- Fields -->
+          <div class="form-group row align-middle">
+            <label class="col-sm-12 col-form-label-sm">{{forms.realestate.programa.label_tag}}</label>
+            <div class="col-lg-12">
+              {{forms.realestate.programa}}
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <!-- Fields -->
+          <div class="form-group row align-middle">
+            <label class="col-sm-12 col-form-label-sm">{{forms.realestate.estructuraTerminaciones.label_tag}}</label>
+            <div class="col-lg-12">
+              {{forms.realestate.estructuraTerminaciones}}
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
   <div class="card bg-light mb-1">
     <div class="card-header">
       Antecedentes técnico-legales
@@ -189,9 +223,26 @@
               <label class="col-sm-4 col-form-label-sm text-right">
                 {{forms.realestate.anoConstruccion.label_tag}}
               </label>
-              <div class="col-lg-4">
-                {{forms.realestate.anoConstruccion}}
+              <div class="col-4">
+                <div class="form-group row align-middle">
+                  <div class="col-lg-12">
+                    <div class="input-group date" id="datetimepicker10" data-target-input="nearest">
+                      {{forms.realestate.anoConstruccion}}
+                      <div class="input-group-append" data-target="#datetimepicker10" data-toggle="datetimepicker">
+                        <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
               </div>
+              <script type="text/javascript">
+                $(function () {
+                  console.log('10')
+                  $('#datetimepicker10').datetimepicker({
+                    format: 'Y'
+                  });
+                });
+              </script>
             </div>
 
             <div class="form-group row align-middle">
@@ -324,21 +375,16 @@
                   </div>
                 </div>
               </div>
-              <script type="text/javascript">
-                $(function () {
-                  $('#datetimepicker1').datetimepicker({
-                    format: 'L',
-                    locale: 'es',
-                    icons: {
-                      time: "far fa-clock",
-                      date: "far fa-calendar-alt",
-                      up: "fas fa-arrow-up",
-                      down: "fas fa-arrow-down"
-                    }
-                  });
-                });
-              </script>
             </div>
+
+            <script type="text/javascript">
+              $(function () {
+                console.log('1')
+                $('#datetimepicker1').datetimepicker({
+                  format: 'YYYY-MM-DD'
+                });
+              });
+            </script>
 
             <div class="row">
               <div class="col-7">
@@ -363,20 +409,16 @@
                   </div>
                 </div>
               </div>
+              
               <script type="text/javascript">
                 $(function () {
+                  console.log('2')
                   $('#datetimepicker2').datetimepicker({
-                    format: 'L',
-                    locale: 'es',
-                    icons: {
-                      time: "far fa-clock",
-                      date: "far fa-calendar-alt",
-                      up: "fas fa-arrow-up",
-                      down: "fas fa-arrow-down"
-                    }
+                    format: 'YYYY-MM-DD'
                   });
                 });
               </script>
+              
             </div>
 
             <div class="form-group row align-middle">
