--- a/web/evaluation/templates/appraiser_evaluation.html
+++ b/web/evaluation/templates/appraiser_evaluation.html
@@ -15,7 +15,7 @@
     <div class="col-8">
         <div class="card">
             <div class="card-body">
-                {% include 'user/appraiser_list.html' %}
+                {% include 'evaluation/appraiser_list.html' %}
             </div>
         </div>
     </div>
