--- a/web/user/templates/user/profile.html
+++ b/web/user/templates/user/profile.html
@@ -46,7 +46,7 @@
         <div class="col-8">
             <div class="card">
                 <div class="card-body">
-                    {% include 'user/appraiser_list.html' %}
+                    {% include "appraiser_list.html" %}
                 </div>
             </div>
         </div>
