--- a/web/appraisal/templates/appraisal/realestate_appraisal.html
+++ b/web/appraisal/templates/appraisal/realestate_appraisal.html
@@ -1,40 +1,39 @@
 {% extends "main/base.html" %}
-{% load static %}
 
 {% load tabs %}
 
 {% block head %}
-  {% load static %}
-  <link rel="stylesheet" href="{% static 'appraisal/css/appraisal.css' %}">
+{% load static %}
+<link rel="stylesheet" href="{% static 'appraisal/css/app.css' %}">
 {% endblock head %}
 
 {% block content %}
 
-  <form class="needs-validation" action="" method="post" id="form" enctype="multipart/form-data" novalidate>
-  {% csrf_token %}
+<form class="needs-validation" action="" method="post" id="form" enctype="multipart/form-data" novalidate>
+{% csrf_token %}
 
-    <nav class="navbar justify-content-between">
-      <!--<a class="navbar-brand" href="#">-->
-      <h4>
-        <span class="badge badge-secondary mr-2" style="font-size: 100%;">{{realestate.get_propertyType_display}}</span>
-        {{realestate.address}}
-      </h4>
-      <!--</a>-->
-      <ul class="navbar-nav mr-auto"> </ul>
-      {% if appraisal.paused %}
-      <button class="btn btn-outline-primary mr-2" type="button" data-toggle="modal" data-target="#modalExport">Resumir</button>
-      {% endif %}
-      {% if appraisal.finished %}
-      <button name="btn_export" class="btn btn-outline-dark" type="button" data-toggle="modal" data-target="#modalExport">Exportar</button>
-      {% else %}
-      <button name="btn_export" class="btn btn-outline-dark mr-2" type="button" data-toggle="modal" data-target="#modalExport">Exportar</button>
-      <button name="btn_finish" class="btn btn-outline-dark mr-2" type="button" data-toggle="modal" data-target="#modalFinish">Finalizar</button>
-      <button name="btn_save" class="btn btn-outline-dark mr-2" name="save" style="font-family:Material Icons;font-size:1em;">save</button>
-      <button name="btn_delete" class="btn btn-outline-dark" type="button" data-toggle="modal" data-target="#modalDelete" style="font-family:Material Icons;font-size:1em;">delete</button>
-      {% endif %}
-    </nav>
+  <nav class="navbar justify-content-between">
+    <!--<a class="navbar-brand" href="#">-->
+    <h4>
+      <span class="badge badge-secondary mr-2" style="font-size: 100%;">{{realestate.get_propertyType_display}}</span>
+      {{realestate.address}}
+    </h4>
+    <!--</a>-->
+    <ul class="navbar-nav mr-auto"> </ul>
+    {% if appraisal.paused %}
+    <button class="btn btn-outline-primary mr-2" type="button" data-toggle="modal" data-target="#modalExport">Resumir</button>
+    {% endif %}
+    {% if appraisal.finished %}
+    <button name="btn_export" class="btn btn-outline-dark" type="button" data-toggle="modal" data-target="#modalExport">Exportar</button>
+    {% else %}
+    <button name="btn_export" class="btn btn-outline-dark mr-2" type="button" data-toggle="modal" data-target="#modalExport">Exportar</button>
+    <button name="btn_finish" class="btn btn-outline-dark mr-2" type="button" data-toggle="modal" data-target="#modalFinish">Finalizar</button>
+    <button name="btn_save" class="btn btn-outline-dark mr-2" name="save" style="font-family:Material Icons;font-size:1em;">save</button>
+    <button name="btn_delete" class="btn btn-outline-dark" type="button" data-toggle="modal" data-target="#modalDelete" style="font-family:Material Icons;font-size:1em;">delete</button>
+    {% endif %}
+  </nav>
 
-    <div class="container-fluid">
+  <div class="container-fluid">
 
     <div class="row">
 
@@ -58,11 +57,13 @@
         {% endif %}
       </div>
 
+      <!--
       <div class="col text-center">
         <div class="alert alert-secondary" role="alert">
           {{appraisal.price}} UF
         </div>
       </div>
+      -->
 
     </div>
 
@@ -132,9 +133,9 @@
 
   </div>
 
-{% include "appraisal/modals.html" %}
-
 </form>
+
+{% include "appraisal/modals.html" %}
 
 <!-- Script to go back to the same tab when refreshing webpage -->
 <script>
